# drone_ilrl

./: .gitignore  README.md  il_interview_problem_breakdown.md  pyproject.toml  requirements.txt
artifacts/analysis/portfolio_final_20260609/: manifest.json  (+2 more)
artifacts/checks/: bc_ppo_alignment_clean50_fixed.json
docs/: action_space_roadmap.md  bc_to_ppo_distribution_shift.md  data_coverage_analysis.md  demo_quality_ablation.md  demo_quality_mechanisms.md  demo_quantity_ablation.md  detour_pilot_results.md  detour_planar_bc_baseline.md  detour_planar_local_bc_baseline.md  detour_planar_raycast_bc_baseline.md  detour_quick_100k_results.md  detour_task_plan.md  experiment_plan.md  experiment_results.md  implementation_todo.md  interview_qa.md  normalization_fix_rerun.md  portfolio_one_page.md  portfolio_summary.md  submission_file_manifest.md  trajectory_coverage_analysis.md
scripts/: analyze_demo_quality_mechanisms.py  analyze_demo_quantity_coverage.py  analyze_detour_policy_failure.py  analyze_policy_rollouts.py  analyze_trajectory_coverage.py  bootstrap.ps1  build_portfolio_results.py  check_bc_ppo_alignment.py  check_env.py  collect_expert_rollouts.py  evaluate_bc.py  evaluate_policy.py  fine_tune_ppo_from_bc.py  plot_experiment_results.py  plot_training_diagnostics.py  run_detour_bc_stability_ablation.sh  run_detour_bc_strong_regularization_ablation.sh  run_detour_expert_bc_aug_ablation.sh  run_detour_expert_bc_loss_ablation.sh  run_detour_main_sweep.sh  train_bc.py  train_ppo.py
src/ilrl_lab/: __init__.py  bc.py  ppo_training.py
tests/: test_waypoint_env.py
(+19 files in other folders)
