[project]
name = "ilrl-drone-lab"
version = "0.1.0"
description = "A uv-managed sandbox for drone imitation learning and reinforcement learning experiments."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "gymnasium>=0.29.1,<1.0",
    "matplotlib>=3.8,<4",
    "numpy>=1.26,<2",
    "pandas>=2.2,<3",
    "rich>=14,<15",
    "scipy>=1.11,<2",
    "seaborn>=0.13,<0.14",
    "stable-baselines3>=2.2.1,<2.3",
    "tensorboard>=2.15,<3",
    "typer>=0.16,<0.17",
]

[project.optional-dependencies]
drones = [
    "gym-pybullet-drones",
]
il = [
    "imitation>=1.0.1,<2",
]
dev = [
    "ipykernel>=6.29,<7",
    "jupyterlab>=4.4,<5",
    "pytest>=9.0,<10",
    "ruff>=0.11,<0.12",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ilrl_lab"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
gym-pybullet-drones = { path = "vendor/gym-pybullet-drones-main", editable = true }
